# f1

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
data/: drivers.json
f1/: bulb_controller.py  live_data.py
tests/: test_bulb_controller.py  test_live_data.py
