[tool.poetry]
name = "f1"
version = "0.1.0"
description = "Playing with f1 live data"
authors = ["Kanishk Singh <hey@kanishk.io>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
tinytuya = "1.13.2"
fastf1 = "^3.4.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
